--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,17 @@ spring:
     url: jdbc:oracle:thin:@//localhost:1521/XE
     username: scott
     password: 1234
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 mybatis:
     config-location: classpath:/config/config.xml
