--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 10000
+  servlet:
+    session:
+      tracking-modes: cookie
 
 spring:
   datasource:
@@ -10,8 +13,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password:
+    username: luna99954
+    password: aoqe rrpk dcnd awom
     properties:
       mail:
         smtp:
